// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dialogs/ebay-alert-dialog Default 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <button
      aria-hidden="true"
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="alert-dialog alert-dialog--mask-fade alert-dialog--show-init"
        role="alertdialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="alert-dialog__window alert-dialog__window--fade keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="alert-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
          </div>
          <div
            class="alert-dialog__main"
            id="alert-dialog-main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            class="alert-dialog__footer"
          >
            <button
              aria-describedby="alert-dialog-main"
              class="btn alert-dialog__acknowledge btn--primary"
              id="alert-dialog-confirm"
            >
              Confirm
            </button>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-alert-dialog With Animation 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p>
      Some outside content...
    </p>
    <div>
      <div
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="alert-dialog alert-dialog--mask-fade"
        hidden=""
        role="alertdialog"
      >
        <div
          class="alert-dialog__window alert-dialog__window alert-dialog__window--fade"
        >
          <div
            class="alert-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
          </div>
          <div
            class="alert-dialog__main"
            id="alert-dialog-main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            class="alert-dialog__footer"
          >
            <button
              aria-describedby="alert-dialog-main"
              class="btn alert-dialog__acknowledge btn--primary"
              id="alert-dialog-confirm"
            >
              Confirm
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
